# prospect-etl-inejctor

./: .env.example  .gitignore  Dockerfile  README.md  app.py  crontab.example  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: enrich-digital.yml  etl-cron.yml  prospect-pipeline.yml
docs/: ENRICHMENT.md
scripts/: run-etl.sh
sql/: 001_schema.sql  002_indexes_views.sql  003_permissions.sql  004_bi_varejo.sql  005_municipios_populacao.sql  006_digital_presenca.sql  007_digital_presenca_upgrade.sql  008_prospectos_qualificados.sql  009_enrichment_quality.sql  010_prospect_qualification_v2.sql
src/cnpj_etl/: cli.py  config.py  database.py  digital_enricher.py  filters.py  ibge_population.py  loader.py  pipeline.py  prospect.py  schema.py  source.py
src/cnpj_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cnpj_etl/enrichment/: __init__.py  commerce.py  email.py  google_places.py  models.py  scoring.py  website.py  whatsapp.py
src/cnpj_etl/enrichment/providers/: __init__.py  base.py  speedio.py
tests/: test_cli.py  test_config.py  test_digital_enricher.py  test_enrichment_commerce.py  test_enrichment_google_places.py  test_enrichment_queue.py  test_enrichment_scoring.py  test_enrichment_website.py  test_enrichment_whatsapp.py  test_filters.py  test_ibge_population.py  test_migrations.py  test_prospect.py  test_source.py  test_transform.py
